--- a/quinzena2/bugfixes/dia4-aula8/index.css
+++ b/quinzena2/bugfixes/dia4-aula8/index.css
@@ -9,6 +9,10 @@
     padding: 0;
 }
 
+*{
+    font-family: 'Roboto', sans-serif;
+}   
+
 h2 {
     background-color: #fe7e02;
     padding: 10px 5px 10px 5px;
@@ -19,6 +23,10 @@ h2 {
 input {
     height: 20px;
     width: 500px;
+    border-top: transparent;
+    border-left: transparent;
+    border-right: transparent;
+    border-bottom-color: 2px solid black;
 }
 
 button:focus {
@@ -35,7 +43,7 @@ div>p:first-child {
 }
 
 div img {
-    background: black;
+    background: white;
 }
 
 .botao-amarelo {
@@ -57,9 +65,8 @@ div img {
 }
 
 .icone {
-    /*height: 15px;*/
     background-color: transparent;
-    height: 15px;
+    height: 20px;
     width: 40px;
 }
 
@@ -73,10 +80,11 @@ div img {
 #container-de-descricao {
     background-color: #2274a5;
     color: white;
+/*    padding-top: 100px;*/
 }
 
 #container-de-descricao>ol {
-    padding: 15px 0px;
+    padding: 20px 0px;
 }
 
 #container-para-comprar {
@@ -87,6 +95,10 @@ div img {
     color: #c44f00;
     padding: 100px 0;
     font-size: 60px;
+}
+
+.decimal>li {
+   list-style-type: decimal; 
 }
 
 
@@ -117,11 +129,14 @@ td button {
     color: black;
 }
 
+td button:hover {
+    background-color: #a18402;
+}
+
 .container-do-search {
     margin-top: 20px;
     height: 100px;
 }
-
 
 #back-button {
     background-color: white;
@@ -138,3 +153,9 @@ td button {
     background-color: #635a3d
 }
 
+.tabela {
+    margin: 10px 0px 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
